--- a/new.css
+++ b/new.css
@@ -43,7 +43,7 @@ body{
     width: 300px;
     height: 100%;
     padding: 2rem;
-    transform: translatex(100%);
+    display: none;
 }
 .bodycontent{
     text-align: center;
