--- a/new.css
+++ b/new.css
@@ -187,19 +187,23 @@ body{
 iframe{
     height: 30vh;
 }
-form input{
-    width: 90%;
-    padding: 20px 50px;
-    background-color: var(--black);
-    color: white;
-    border: none;
-}
+
 form{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
+    border: red solid;
+}
+form input{
+    width: 85%;
+    padding: 20px 50px;
+    background-color: var(--black);
+    color: white;
+    border: none;
+    border: red solid;
 }
 form h1{
     font-size: 3rem;
@@ -211,6 +215,9 @@ form button{
     background-color: #d3ad7f;
     width: 150px;
     margin-top: 10px;
+}
+.map{
+    width: 90%;
 }
 .contactUs{
     display: flex;
@@ -340,7 +347,6 @@ form button{
     }
     .map{
         display: flex;
-        width: 90%;
     }
     form h1{
         font-size: 2rem;
