--- a/new.css
+++ b/new.css
@@ -43,11 +43,10 @@ body{
     width: 300px;
     height: 100%;
     padding: 2rem;
-    display: none;
-    transition: 1s;
+    transform: translateX(100%);
 }
 .hidden{
-    display: block;
+    transform: translateX(0%);
 }
 ul li{
     padding: 10px;
