--- a/new.css
+++ b/new.css
@@ -10,6 +10,8 @@
     padding: 0; 
     box-sizing: border-box;
     overflow-x: hidden;
+    text-decoration: none;
+    border: none;
 }
 body{
     font-family: "Roboto", sans-serif;
@@ -252,7 +254,7 @@ form button{
 }
 .getintouch__icons i{
     position: absolute;
-    left: 50px;
+    left: 55px;
     color: #fcfcff;
     top: 30px;
     font-size: 1.5rem;
@@ -336,7 +338,7 @@ form button{
         display: flex;
         align-items: flex-start;
         max-width: 900px;
-        padding: 0 20px;
+        padding: 0 80px;
     }
     .bodycontent h1{
         text-align: left;
